# gutendex_cleverti

./: .env  CLEVERTI.postman_collection.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: events.py  helpers.py  main.py  models.py  settings.py
app/database/: models.py  mongo_engine_con.py
tests/: conftest.py  test_get_books.py  test_get_top_books.py  test_post_reviews.py
